--- a/DynamicSpriteBuilder/DynamicSpriteBuilder/Pages/Index.cshtml
+++ b/DynamicSpriteBuilder/DynamicSpriteBuilder/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Dynamic Sprite Builder";
 }
 
 @Model.Message
