added most classes, etc.

--- a/DynamicSpriteBuilder/DynamicSpriteBuilder/Pages/Index.cshtml
+++ b/DynamicSpriteBuilder/DynamicSpriteBuilder/Pages/Index.cshtml
@@ -4,4 +4,8 @@
     ViewData["Title"] = "Dynamic Sprite Builder";
 }
 
-@Model.Message
+<h1>Let's build some spritesheets.</h1>
+<button type="submit">Build it!</button>
+<div class="sprites">
+    
+</div>
