Done creating sprites

--- a/DynamicSpriteBuilder/DynamicSpriteBuilder/Pages/Index.cshtml
+++ b/DynamicSpriteBuilder/DynamicSpriteBuilder/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Let's build some spritesheets.</h1>
-<button type="submit">Build it!</button>
+<button type="submit">Build it!</button><label></label>
 <div class="sprites">
     
 </div>
