--- a/DynamicSpriteBuilder/DynamicSpriteBuilder/wwwroot/css/site.css
+++ b/DynamicSpriteBuilder/DynamicSpriteBuilder/wwwroot/css/site.css
@@ -34,10 +34,15 @@ button:hover {
 }
 
 .sprites img:first-child {
-    min-width: 250px;
+    height: 300px;
+    display: block;
+    border: 3px solid gray;
+    width: auto;
 }
 .sprites img {
-    float: left;
+    display: inline-block;
     border: 1px solid gray;
     margin: 10px;
+    height: 150px;
+    width: 150px;
 }
